@@ -15,6 +15,7 @@
 #include "popupmanager.h"
 
 class QLabel;
+class QScrollBar;
 
 class flagDivisionAsker;
 class infoWidget;
@@ -37,10 +38,16 @@ Q_OBJECT
 	
 	private slots:
 		void handleMapClick(QRgb c, const QPoint &p);
+		void showScrollBars(bool b);
+		void setScrollBarsPosition(int x, int y);
+		void setScrollBarsVisibleSize(int w, int h);
+		void setScrollBarsMaximumSize(int w, int h);
 	
 	private:
 		QLabel *p_next;
-			
+		QScrollBar *p_hsb, *p_vsb;
+		int p_hsbms, p_vsbms; //H and V maximum size for scrollbars
+		
 		infoWidget *p_infoWidget;
 		mapWidget *p_mapWidget;
 		
